fix UI issues on safari group events by date on events table show time for date created hide next retry for events past max retry add identifier for retried events

--- a/web/ui/dashboard/src/pages/dashboard/style.scss
+++ b/web/ui/dashboard/src/pages/dashboard/style.scss
@@ -161,17 +161,13 @@
 
 			.card--container {
 				padding: 24px 24px 16px;
-				margin-bottom: 16px;
-				border-bottom: 1px solid #edeff5;
 
-				.auth-item {
-					background: #fafbff;
+				.list-item {
 					border-radius: 8px;
-					padding: 12px 16px;
+					padding: 10px 0;
 					display: flex;
-					align-items: center;
 					justify-content: space-between;
-					margin-bottom: 16px;
+					border-bottom: 1px solid #edeff5;
 
 					&--label {
 						font-weight: 500;
@@ -183,6 +179,11 @@
 					&--item {
 						line-height: 24px;
 						font-size: 14px;
+						max-width: 245px;
+						text-align: right;
+						word-wrap: break-word;
+						color: #000000;
+						font-weight: 500;
 					}
 
 					button {
@@ -300,7 +301,7 @@
 				bottom: 0;
 				top: 0;
 				z-index: 3;
-				background: linear-gradient(transparent, #fff);
+				background: linear-gradient(rgba(255, 255, 255, 0.001), #ffffff);
 			}
 
 			button {
@@ -400,6 +401,11 @@
 			font-size: 18px;
 		}
 	}
+
+	&--date-row {
+		border-top: 1px solid #eee;
+		border-bottom: 1px solid #eee;
+	}
 }
 
 table {
@@ -436,6 +442,39 @@ table {
 			font-size: 12px;
 			line-height: 28px;
 			text-align: center;
+
+			&--Failure {
+				background: #f7e5e5;
+				color: #ff0505;
+			}
+
+			&--Scheduled {
+				background: #f8e5b9;
+			}
+
+			&--Success {
+				background: #e5f7e7;
+				color: #1f9c6a;
+			}
+		}
+
+		.has-retry {
+			display: flex;
+			align-items: center;
+			position: relative;
+
+			img {
+				margin-right: 10px;
+				width: 16px;
+				position: absolute;
+				top: 50%;
+				transform: translate(-10px, -50%);
+				opacity: 0.5;
+			}
+
+			.tag {
+				margin-left: 13px;
+			}
 		}
 
 		td {
@@ -472,6 +511,13 @@ table {
 	align-items: center;
 	margin-bottom: 16px;
 	position: relative;
+	align-items: stretch;
+	max-height: 50px;
+
+	& > div {
+		display: flex;
+		align-items: center;
+	}
 
 	.filter--button,
 	select {
@@ -485,10 +531,29 @@ table {
 		min-width: 145px;
 		font-size: 14px;
 		line-height: 14px;
-		margin-left: 8px;
+		margin: 0 0 0 8px;
 
 		div {
 			margin: 0 8px;
+		}
+	}
+
+	.select {
+		width: fit-content;
+		position: relative;
+
+		&::after {
+			content: '';
+			position: absolute;
+			background: url('../../assets/img/angle-arrow-down.svg');
+			width: 26px;
+			height: 24px;
+			background-size: contain;
+			right: 5px;
+		}
+
+		select {
+			height: 46px;
 		}
 	}
 
@@ -526,4 +591,8 @@ table {
 	button {
 		padding: 5px;
 	}
+}
+
+.rdrDateDisplayWrapper {
+	width: 100%;
 }
